--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <body>
 
-<h1>Hallo</h1>
+<h1 style="   color: blue;">Hallo</h1>
   <h2>Dit is een test</h2>
-  test 2
-
+  tekst 3 4 5 6
+<h3 style="color: red; size: 450px;">Dit is het onderste stukje tekst</h3>
+<p> 
+nieuwe test met de p
+</p>
+<h4>nu test 6</h4>
 </body>
 </html>
